Fixed alignment issues after adding logo

--- a/css/experience.css
+++ b/css/experience.css
@@ -125,6 +125,8 @@ nav ul li {
 }
 
 nav ul li:first-child {
+   position: absolute;
+   left: 0;
    float: left;
    color: #dfdfdf;
    text-decoration: none;
